--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </form>
 
 </div>    
-    
+<a href="index2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:1280px; WIDTH:50px; HEIGHT:50px" SRC="images/Contacts.png">
+<a href="game.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:1230px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
 </body>
 </html>
