--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
 
 </div>    
 <a href="index2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:1280px; WIDTH:50px; HEIGHT:50px" SRC="images/Contacts.png">
-<a href="game.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:1230px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
+<a href="Game.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:1230px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
 </body>
 </html>
