--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
 </div>    
 <a href="index2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:500px; WIDTH:50px; HEIGHT:50px" SRC="images/Contacts.png">
 <a href="game.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:450px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
+<a href="game2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:400px; WIDTH:50px; HEIGHT:50px" SRC="images/Game2.png">
 </body>
 </html>
