--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
 <a href="index2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:500px; WIDTH:50px; HEIGHT:50px" SRC="images/Contacts.png">
 <a href="game.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:450px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
 <a href="game2.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:400px; WIDTH:50px; HEIGHT:50px" SRC="images/Game2.png">
-</body>
+<a href="game3.html"><IMG STYLE="position:absolute; TOP:0px; LEFT:350px; WIDTH:50px; HEIGHT:50px" SRC="images/Game.png">
+    </body>
 </html>
